finished functioning typewrite effect

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,7 +3,8 @@
 	<head>
 		<title> Gagandeep Kang's Personal Website</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" rel="stylesheet">
-	</head>
+        <link rel="stylesheet" type = "text/css" href ="/public/css/app.css">
+  </head>
 	<body>
             <nav class="navbar navbar-expand-lg navbar-light" style = "background-color: #e3f2fd">
                     <a class="navbar-brand" href="#">GK</a>
