--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,18 @@
 <% include partials/header %> 
-
-
-
-
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-12">
+			<div id = "content">
+				<div class = "typewriter">
+                    <h3>
+                        <span class = "text-1">Hi! I'm Gagandeep Kang</span>
+                        <span class = "text-2">I'm a Software Developer</span>
+                    </h3>
+                </div>
+                <hr>
+				<button class="btn btn-default btn-lg"><i class="fas fa-paw"></i> About Me</button>
+			</div>
+			</div>
+		</div>
+	</div>	
 <% include partials/footer %> 
