--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,13 +1,13 @@
 <!DOCTYPE html> 
 <html>
 	<head>
-		<title> Gagandeep Kang's Personal Website</title>
+		<title> Welcome</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" rel="stylesheet">
         <link rel="stylesheet" type = "text/css" href ="/public/css/app.css">
   </head>
 	<body>
-            <nav class="navbar navbar-expand-lg navbar-light" style = "background-color: #e3f2fd">
-                    <a class="navbar-brand" href="#">GK</a>
+            <nav class="navbar navbar-expand-lg navbar-light" style = "background-color: #FFEBCD;opacity: 0.75;">
+                    <a class="navbar-brand" href="/">GK</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
                     </button>
@@ -15,10 +15,10 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                       <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                          <a class="nav-link" href="/about/">About <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#">Link</a>
+                          <a class="nav-link" href="/projects/">Projects</a>
                         </li>
                         <li class="nav-item dropdown">
                           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
