--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,18 +1,69 @@
-<% include partials/header %> 
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-12">
-			<div id = "content">
-				<div class = "typewriter">
-                    <h3>
-                        <span class = "text-1">Hi! I'm Gagandeep Kang</span>
-                        <span class = "text-2">I'm a Software Developer</span>
-                    </h3>
-                </div>
-                <hr>
-				<button class="btn btn-default btn-lg"><i class="fas fa-paw"></i> About Me</button>
-			</div>
-			</div>
-		</div>
-	</div>	
+<!DOCTYPE html> 
+<html>
+	<head>
+		<title> Welcome</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" rel="stylesheet">
+        <link rel="stylesheet" type = "text/css" href ="/public/css/app.css">
+  </head>
+	<body class = "home-body">
+            <nav class="navbar navbar-expand-lg navbar-light" style = "background-color: #FFEBCD;opacity: 0.75;">
+                    <a class="navbar-brand" href="/">GK</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                      <span class="navbar-toggler-icon"></span>
+                    </button>
+                  
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                      <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                          <a class="nav-link" href="/about/">About <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="/projects/">Projects</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Dropdown
+                          </a>
+                          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Action</a>
+                            <a class="dropdown-item" href="#">Another action</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Something else here</a>
+                          </div>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link disabled" href="#">Disabled</a>
+                        </li>
+                      </ul>
+                    </div>
+                  </nav>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12">
+                        <div id = "content">
+                            <div class = "typewriter">
+                                <h3>
+                                    <span class = "text-1">Hi! I'm Gagandeep Kang</span>
+                                    <span class = "text-2">I'm a Software Developer</span>
+                                </h3>
+                            </div>
+                            <hr>
+                            <p class = "links">
+                                <span id = "resume">
+                                    <a href = "/public/Resume.pdf" target="_blank">Resume |</a>
+                                </span>
+                                <span id = "linkedin">
+                                        <a href = "https://www.linkedin.com/in/gaskang/" target="_blank">LinkedIn |</a>
+                                </span>
+                                <span id = "github">
+                                        <a href = "https://github.com/gkang2018" target="_blank">Github |</a>
+                                </span>
+                                <span id = "email">
+                                        <a href = "#">Email Me </a>
+                                </span>
+                            </p>
+                        </div>
+                        </div>
+                    </div>
+                </div>	
 <% include partials/footer %> 
