--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10,7 +10,6 @@ html {
     width: 100%;
     height: 100%;
     font-family: "Lato";
-    color: white;
 }
 
 h3 {
@@ -99,7 +98,6 @@ hr {
 
 
 .cards {
-    border: 5px solid black; 
     margin-top: 5rem; 
     margin-left: 1rem; 
     padding-left: 5rem; 
@@ -111,3 +109,9 @@ hr {
 .card {
     margin-bottom: 3rem; 
 }
+
+.card-body {
+    color: black; 
+}
+
+
