--- a/views/about.ejs
+++ b/views/about.ejs
@@ -5,7 +5,9 @@
             <img src = "/public/images/me.jpeg">
         </div>
         <div class = "col-right">
-
+            <h4>Gagandeep Kang</h4>
+            <p></p>
+            <p></p> 
         </div>
     </div>
 
