finished about me

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -53,14 +53,19 @@
 								<h2>Who am I?</h2>
 								<p>Hello! My name is Gagandeep Kang and I'm currently a sophomore studying Computer Science and Mathematics at Boston University. <br /> <br />
                 During the school year, I have the opportunity to be a part of Boston University's Hack4Impact Chapter, which is an organization that develops applications for non-profits in Boston. 
-                 <br />
-                  
+                 I am also the treasurer of BU's Global App Initiative which is an organization that builds apps for our community. This past semester, I joined 
+                  OpenWeb, an app incubator that brings together highly motivated students to develop tech projects to collaborate, design, and learn together.
+                  <br />
+                  <br />
+                  Outside of developing, I am a judge for the Boston Debate League, am a food fanatic, and love playing and watching basketball. Feel free to send me a message if any of those pique your interests. 
               </p>
 							</header>
 							<ul class="icons major">
-								<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
-								<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
-								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li>
+								<li><a href="/public/Resume.pdf" target = "_blank" class="button fit">Resume</a></li>
+								<li><a href="https://www.linkedin.com/in/gaskang/" target = "_blank" class="button fit">LinkedIn</a></li>
+                <li><a href="https://github.com/gkang2018" class="button fit" target = "_blank" >Github</a></li>
+                <li><a href="mailto: gskang@bu.edu" class="button fit" target = "_blank" >Email Me</a></li>
+                
 							</ul>
 						</div>
 					</section>
@@ -94,9 +99,8 @@
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Accumsan mus tortor nunc aliquet</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>My Projects</h2>
+								<p>Take a look at some of the projects that I've had the opportunity to work on </p>
 							</header>
 							<ul class="features">
 								<li class="icon fa-paper-plane">
