added buttons to project

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -105,27 +105,33 @@
 							<ul class="features">
 								<li class="icon fa-paper-plane">
 									<h3>Fake News</h3>
-									<p>Built a Google Chrome Extension at BostonHacks that analyzes the authenticity of a news article.</p>
+                  <p>Built a Google Chrome Extension at BostonHacks that analyzes the authenticity of a news article.</p>
+                  <a href="#" class="button fit">Learn More</a>
 								</li>
 								<li class="icon solid fa-laptop">
 									<h3>Agriworks</h3>
-									<p>Developing a web application that will mitigate the agrarian resource crisis in India</p>
+                  <p>Developing a web application that will mitigate the agrarian resource crisis in India</p>
+                  <a href="#" class="button fit">Learn More</a>
 								</li>
 								<li class="icon solid fa-code">
 									<h3>YelpCamp</h3>
-									<p>A NodeJS application that allows users to rate, share, and purchase custom campgrounds</p>
+                  <p>A NodeJS application that allows users to rate, share, and purchase custom campgrounds</p>
+                  <a href="#" class="button fit">Learn More</a>
 								</li>
 								<li class="icon solid fa-headphones-alt">
 									<h3>SilentParty</h3>
-									<p>An iOS application that synchronizes music to create a party atmosphere for users.</p>
+                  <p>An iOS application that synchronizes music to create a party atmosphere for users.</p>
+                  <a href="#" class="button fit">Learn More</a>
 								</li>
 								<li class="icon fa-heart">
 									<h3>MuchToDo</h3>
-									<p>An iOS application that customizes a users reminders.</p>
+                  <p>An iOS application that customizes a users reminders.</p>
+                  <a href="#" class="button fit">Learn More</a>
 								</li>
 								<li class="icon fa-flag">
 									<h3>QuickStop</h3>
-									<p>A web application that optimizes users traveling in Boston.</p>
+                  <p>A web application that optimizes users traveling in Boston.</p>
+                  <a href="#" class="button fit">Learn More</a>
 								</li>
 							</ul>
 						</div>
