finished fake news project page

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,18 +15,17 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="/">Spectral</a></h1>
+						<h1><a href="/">GK</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Generic</a></li>
-											<li><a href="elements.html">Elements</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
+											<li><a href="/">Home</a></li>
+											<li><a href="generic.html">About Me</a></li>
+											<li><a href="elements.html">Projects</a></li>
+											<li><a href="#">Contact Me</a></li>
 										</ul>
 									</div>
 								</li>
@@ -106,7 +105,7 @@
 								<li class="icon fa-paper-plane">
 									<h3>Fake News</h3>
                   <p>Built a Google Chrome Extension at BostonHacks that analyzes the authenticity of a news article.</p>
-                  <a href="#" class="button fit">View Project</a>
+                  <a href="/fakenews/" class="button fit">View Project</a>
 								</li>
 								<li class="icon solid fa-laptop">
 									<h3>Agriworks</h3>
@@ -153,18 +152,12 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-						</ul>
 						<ul class="copyright">
 							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
 
+          
 			</div>
 
 		<!-- Scripts -->
